udpate test to refresh website on git

--- a/Game4InARow/power4JS_V0.html
+++ b/Game4InARow/power4JS_V0.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>PUISSANCE 4</h1>
+    <h1>PUISSANCE FOUR</h1>
     <div class="gameField">
         <div class="mainGrid">
             <div class="case enterGame">
