--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <h1>My portfolio !</h1>
     <a href="./Game4InARow/index.html">Game4InARow</a>
+    <a href="./cv_tintin/index.html">CV Tintin</a>
 
 </body>
 
