update to be playable with one player only

--- a/Game4InARow/index.html
+++ b/Game4InARow/index.html
@@ -163,7 +163,8 @@
         </div>
     </div>
     <div class=boardBelowGameField>
-        <button type="submit" id="submitBtn">PLAY AGAIN</button>
+        <button type="submit" id="onePlayerButton">START ONE PLAYERS</button>
+        <button type="submit" id="twoPlayerButton">START TWO PLAYERS</button>
     </div>
 
     <script src="./power4JS_V0.js"></script>
